--- a/404.html
+++ b/404.html
@@ -28,8 +28,8 @@
 <body>
 <main>
 <h1 data-test-id="text-404">404</h1>
-<p>I'm afraid you've found a page that doesn't exist on CodePen. That can happen when you follow a link to something that has since been deleted. Or the link was incorrect to begin&nbsp;with.</p>
-<p>Sorry about that. We've logged the error for review, in case it's our fault.</p>
+<p>เราเกรงว่าคุณพบหน้าที่ไม่มีอยู่ใน เว็บนี้ ที่สามารถเกิดขึ้นได้เมื่อคุณไปตามลิงก์ไปยังสิ่งที่ถูกลบไปแล้ว หรือลิงก์ไม่ถูกต้องเพื่อเริ่มต้นด้วย</p>
+ <p>ขออภัยเกี่ยวกับเรื่องนั้น เราได้บันทึกข้อผิดพลาดเพื่อตรวจสอบแล้ว ในกรณีที่เป็นความผิดของเราเอง</p>
 <ul>
 <li>
 <a href="/">Go to the homepage</a>
