--- a/404.html
+++ b/404.html
@@ -32,9 +32,7 @@
  <p>ขออภัยเกี่ยวกับเรื่องนั้น เราได้บันทึกข้อผิดพลาดเพื่อตรวจสอบแล้ว ในกรณีที่เป็นความผิดของเราเอง</p>
 <ul>
 <li>
-<a href="/">Go to the homepage</a>
-</li>
-<li>
+<a href="/Errordion/furi">กลับหน้าหลัก</a>
 </main>
 
 
