--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
  <p>ขออภัยเกี่ยวกับเรื่องนั้น เราได้บันทึกข้อผิดพลาดเพื่อตรวจสอบแล้ว ในกรณีที่เป็นความผิดของเราเอง</p>
 <ul>
 <li>
-<a href="/Errordion/furi">กลับหน้าหลัก</a>
+<a href="/furi/error">กลับหน้าหลัก</a>
 </main>
 
 
